# cesium-native

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGES.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  ThirdParty.json  automate.py  cesium-native.yml  cesium-nativeConfig.cmake  conanlayout.ini  conanws.yml  package-lock.json  package.json  requirements.txt  test.db  vcpkg-configuration.json  vcpkg.json
Cesium3DTiles/: CMakeLists.txt  conanfile.py  library.yml
Cesium3DTiles/src/: AsyncSystem.cpp  Batched3DModel.cpp  Batched3DModel.h  Batched3DModelContent.cpp  Batched3DModelContent.h  BingMapsRasterOverlay.cpp  BoundingVolume.cpp  Camera.cpp  CartographicSelection.cpp  CesiumLogging.h  CesiumSpdlog.h  CompositeContent.cpp  CompositeContent.h  Credit.cpp  CreditSystem.cpp  CullingVolume.cpp  ExtensibleObject.cpp  ExternalTilesetContent.cpp  Gltf.cpp  GltfContent.cpp  Instanced3DModelContent.cpp  Instanced3DModelContent.h  IonRasterOverlay.cpp  JsonHelpers.cpp  JsonHelpers.h  Library.cpp  Logging.cpp  Logging.h  MetadataQuery.cpp  QuadtreeRasterMappedTo3DTile.cpp  QuadtreeRasterOverlayTileProvider.cpp  QuantizedMesh.cpp  QuantizedMesh.h  QuantizedMeshContent.cpp  QuantizedMeshContent.h  RasterMappedTo3DTile.cpp  RasterOverlay.cpp  RasterOverlayCollection.cpp  RasterOverlayCutoutCollection.cpp  RasterOverlayTile.cpp  (+33 more)
Cesium3DTiles/test/: Cesium3DTilesTestUtils.cpp  Cesium3DTilesTestUtils.h  FileAssetAccessor.cpp  FileAssetAccessor.h  FileAssetRequest.cpp  FileAssetRequest.h  FileAssetResponse.cpp  FileAssetResponse.h  NullResourcePreparer.cpp  NullResourcePreparer.h  SimpleAssetAccessor.h  SimpleAssetRequest.h  SimpleAssetResponse.h  SimplePrepareRendererResource.h  SimpleTaskProcessor.cpp  SimpleTaskProcessor.h  TestAsyncSystem.cpp  TestBatched3DModelContent.cpp  TestBatchedTableToExtFeatureTable.cpp  TestCesium3DTilesIntegration.cpp  TestCreditSystem.cpp  TestMetadataQuery.cpp  TestQuantizedMeshContent.cpp  TestSkirtMeshMetadata.cpp  TestTileset.cpp  TestTilesetSelectionAlgorithm.cpp  TestUpgradeBatchTableToExtFeatureMetadata.cpp  TestUpsampleGltfForRasterOverlay.cpp  readFile.cpp  readFile.h
Cesium3DTilesContent/: CMakeLists.txt
Cesium3DTilesContent/src/: B3dmToGltfConverter.cpp  BatchTableHierarchyPropertyValues.cpp  BatchTableHierarchyPropertyValues.h  BatchTableToGltfStructuralMetadata.cpp  BatchTableToGltfStructuralMetadata.h  BinaryToGltfConverter.cpp  CmptToGltfConverter.cpp  GltfConverterUtility.cpp  GltfConverters.cpp  GltfUtilities.cpp  I3dmToGltfConverter.cpp  ImplicitTiling.cpp  ImplicitTilingUtilities.cpp  LegacyUtilities.cpp  MetadataProperty.cpp  MetadataProperty.h  PntsToGltfConverter.cpp  QuantizedMeshLoader.cpp  SkirtMeshMetadata.cpp  SubtreeAvailability.cpp  TileBoundingVolumes.cpp  TileTransform.cpp  TilesetWalker.cpp  VctrToGltfConverter.cpp  registerAllTileContentTypes.cpp  upsampleGltfForRasterOverlays.cpp
Cesium3DTilesContent/test/: ConvertTileToGltf.cpp  ConvertTileToGltf.h  TestB3dmToGltfConverter.cpp  TestI3dmToGltfConverter.cpp  TestImplicitTilingUtilities.cpp  TestPntsToGltfConverter.cpp  TestQuantizedMeshContent.cpp  TestQuantizedMeshLoader.cpp  TestSkirtMeshMetadata.cpp  TestSubtreeAvailability.cpp  TestTileBoundingVolumes.cpp  TestTileTransform.cpp  TestUpgradeBatchTableToExtStructuralMetadata.cpp  TestUpsampleGltfForRasterOverlay.cpp
Cesium3DTilesPipeline/: CMakeLists.txt
Cesium3DTilesPipeline/src/: Batched3DModelContent.cpp  Batched3DModelContent.h  BingMapsRasterOverlay.cpp  BoundingVolume.cpp  CompositeContent.cpp  CompositeContent.h  CreditSystem.cpp  ExternalTilesetContent.cpp  Gltf.cpp  GltfContent.cpp  IonRasterOverlay.cpp  QuantizedMeshContent.cpp  QuantizedMeshContent.h  RasterMappedTo3DTile.cpp  RasterOverlay.cpp  RasterOverlayCollection.cpp  RasterOverlayTile.cpp  RasterOverlayTileProvider.cpp  SkirtMeshMetadata.cpp  SkirtMeshMetadata.h  Tile.cpp  TileContentFactory.cpp  TileContentLoadInput.cpp  TileID.cpp  TileMapServiceRasterOverlay.cpp  TileUtilities.cpp  TileUtilities.h  Tileset.cpp  ViewState.cpp  calcQuadtreeMaxGeometricError.cpp  calcQuadtreeMaxGeometricError.h  registerAllTileContentTypes.cpp  upsampleGltfForRasterOverlays.cpp  upsampleGltfForRasterOverlays.h
Cesium3DTilesPipeline/test/: SimplePrepareRendererResource.h  TestCreditSystem.cpp  TestQuantizedMeshContent.cpp  TestSkirtMeshMetadata.cpp  TestTilesetSelectionAlgorithm.cpp  TestUpsampleGltfForRasterOverlay.cpp
Cesium3DTilesReader/: CMakeLists.txt  conanfile.py  library.yml
Cesium3DTilesReader/src/: ExtensibleObjectJsonHandler.cpp  ExtensibleObjectJsonHandler.h  ExtensionsJsonHandler.cpp  ExtensionsJsonHandler.h  Readers.cpp  SchemaReader.cpp  SchemaReaderLegacy.cpp  SubtreeFileReader.cpp  SubtreeLegacyReader.cpp  SubtreeReader.cpp  SubtreeReaderLegacy.cpp  TilesetReader.cpp  VoxelContentReader.cpp
Cesium3DTilesSelection/: CMakeLists.txt  conanfile.py  library.yml
Cesium3DTilesWriter/: CMakeLists.txt  conanfile.py  library.yml
CesiumAnalysis/: CMakeLists.txt
CesiumAsync/: CMakeLists.txt  conanfile.py  library.yml
CesiumClientCommon/: CMakeLists.txt
CesiumCurl/: CMakeLists.txt
CesiumGeometry/: CMakeLists.txt  conanfile.py  library.yml
CesiumGeospatial/: CMakeLists.txt  conanfile.py  library.yml
CesiumGltf/: CMakeLists.txt  conanfile.py  library.yml
CesiumGltfContent/: CMakeLists.txt
CesiumGltfReader/: CMakeLists.txt  conanfile.py  library.yml
CesiumGltfWriter/: CMakeLists.txt  conanfile.py  library.yml
CesiumI3S/: CMakeLists.txt
CesiumI3SContent/: CMakeLists.txt
CesiumI3SReader/: CMakeLists.txt
CesiumI3SSelection/: CMakeLists.txt
CesiumITwinClient/: CMakeLists.txt
CesiumImage/: CMakeLists.txt
CesiumIonClient/: CMakeLists.txt  conanfile.py  library.yml
CesiumJsonExtensions/: CMakeLists.txt
CesiumJsonReader/: CMakeLists.txt  conanfile.py  library.yml
CesiumJsonWriter/: CMakeLists.txt  conanfile.py  library.yml
CesiumMetadata/: CMakeLists.txt
CesiumNativeTests/: CMakeLists.txt  conanfile.py
CesiumQuantizedMeshTerrain/: CMakeLists.txt
(+2319 files in other folders)
